samples/_failures_safe/1761205584_29c85f_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_14187f2c.c: In function ‘tokenize’:
./samples/SAFE/__tmp_14187f2c.c:163:23: error: expected ‘;’ at end of input
  163 |     return token_count
      |                       ^
      |                       ;
./samples/SAFE/__tmp_14187f2c.c:163:5: error: expected declaration or statement at end of input
  163 |     return token_count
      |     ^~~~~~
